@@ -1,5 +1,6 @@
 == 3.4.6 ==
 
+* Fixed ability to access account page by unlogged users
 * Fixed issue with left user information in the membership relationships table after user has been deleted
 * Fixed issue with popup registration form when email address was not determined
 * Fixed issue with not required invite code at BuddyPress registration page
